--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.facebook.com/profile.php?id=100008698477718" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://github.com/Lucas-Rose" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="mailto:lucas58.rose@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -92,7 +92,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.png" alt="" /></a>
+										<a href="https://schtarr.itch.io/what-in-the-abomination" class="image fit"><img src="images/pic03.png" alt="" /></a>
 										<header>
 											<h3>What in the Abomination?! <br />
 												(Unity3D 24 Hour Game Jam)</h3>
@@ -141,7 +141,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<img src="images/pic08.jpg" alt="desc" class="image featured"/>
 
 							<p>Hey there! My name is Lucas Rose, and I am an undergraduate of Macquarie University, currently studying a Bachelor of
 								Game Design & Development! I have an extreme passion for everything within the world of Software Development, Application Design and most
