--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 							<p>Here are some of the numerous projects I've worked on across the years; including website applications, <br />
 							functional software and playable games on numerous platforms including browser and application. <br />
-							All starting from my early days on Itch.io!</p>
+								All starting from my early days on <a href=https://lucas-rose.itch.io>Itch.io!</a></p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -101,7 +101,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.png" alt="" /></a>
+										<a href="https://schtarr.itch.io/slanderous-adventures" class="image fit"><img src="images/pic04.png" alt="" /></a>
 										<header>
 											<h3>Slanderous Adventures<br />
 												(2D Unity Online Multiplayer Game)</h3>
@@ -116,13 +116,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.png" alt="" /></a>
+										<a href="https://github.com/Lucas-Rose/BobsJobs" class="image fit"><img src="images/pic06.png" alt="" /></a>
 										<header>
 											<h3>Bob's Jobs! (Backend Integrated Webpage)</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.png" alt="" /></a>
+										<a href="https://schtarr.itch.io/extreme-spoats" class="image fit"><img src="images/pic07.png" alt="" /></a>
 										<header>
 											<h3>EXTREME SPOATS!<br />(Unity Online Multiplayer Game)</h3>
 										</header>
