--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://schtarr.itch.io/what-in-the-abomination" class="image fit"><img src="images/pic03.png" alt="" /></a>
+										<a href="https://schtarr.itch.io/what-in-the-abomination" class="image fit" target="_blank"><img src="images/pic03.png" alt="" /></a>
 										<header>
 											<h3>What in the Abomination?! <br />
 												(Unity3D 24 Hour Game Jam)</h3>
@@ -101,7 +101,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://schtarr.itch.io/slanderous-adventures" class="image fit"><img src="images/pic04.png" alt="" /></a>
+										<a href="https://schtarr.itch.io/slanderous-adventures" class="image fit" target="_blank"><img src="images/pic04.png" alt="" /></a>
 										<header>
 											<h3>Slanderous Adventures<br />
 												(2D Unity Online Multiplayer Game)</h3>
@@ -116,13 +116,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://github.com/Lucas-Rose/BobsJobs" class="image fit"><img src="images/pic06.png" alt="" /></a>
+										<a href="https://github.com/Lucas-Rose/BobsJobs" class="image fit" target="_blank"><img src="images/pic06.png" alt="" /></a>
 										<header>
 											<h3>Bob's Jobs! (Backend Integrated Webpage)</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://schtarr.itch.io/extreme-spoats" class="image fit"><img src="images/pic07.png" alt="" /></a>
+										<a href="https://schtarr.itch.io/extreme-spoats" class="image fit" target="_blank"><img src="images/pic07.png" alt="" /></a>
 										<header>
 											<h3>EXTREME SPOATS!<br />(Unity Online Multiplayer Game)</h3>
 										</header>
