Farmer Seth Update

--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
 											<h3>EXTREME SPOATS!<br />(Unity Online Multiplayer Game)</h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="https://lucas-rose.itch.io/farmer-seth" class="image fit" target="_blank"><img src="images/main.png" alt="" /></a>
+										<header>
+											<h3>Farmer Seth<br />(Unity 72 Hour Game Jam)</h3>
+										</header>
+									</article>
 								</div>
 							</div>
 
