--- a/index.html
+++ b/index.html
@@ -98,6 +98,13 @@
 												(Unity3D 24 Hour Game Jam)</h3>
 										</header>
 									</article>
+									<article class="item">
+										<a href="https://github.com/Lucas-Rose/pathFinder" class="image fit" target="_blank"><img src="pathFinder.png" alt="" /></a>
+										<header>
+											<h3>pathFinder Project<br />
+												(Java Grid Based Program Collection)</h3>
+										</header>
+									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
