--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://github.com/Lucas-Rose/pathFinder" class="image fit" target="_blank"><img src="pathFinder.png" alt="" /></a>
+										<a href="https://github.com/Lucas-Rose/pathFinder" class="image fit" target="_blank"><img src="images/pathFinder.png" alt="" /></a>
 										<header>
 											<h3>pathFinder Project<br />
 												(Java Grid Based Program Collection)</h3>
