--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://schtarr.itch.io/slanderous-adventures" class="image fit" target="_blank"><img src="images/pic04.png" alt="" /></a>
+										<a href="https://lucas-rose.itch.io/shutdown-reboot" class="image fit" target="_blank"><img src="https://img.itch.zone/aW1nLzEwMDkzMTgzLnBuZw==/315x250%23c/%2FiDFjk.png" alt="" /></a>
 										<header>
-											<h3>Slanderous Adventures<br />
-												(2D Unity Online Multiplayer Game)</h3>
+											<h3>Shutdown, Reboot<br />
+												2D Platformer - MQ Game Jam</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -127,9 +127,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://schtarr.itch.io/extreme-spoats" class="image fit" target="_blank"><img src="images/pic07.png" alt="" /></a>
+										<a href="https://Lucas-rose.github.io/StrongWellness" class="image fit" target="_blank"><img src="images/StrongWellness.png" alt="" /></a>
 										<header>
-											<h3>EXTREME SPOATS!<br />(Unity Online Multiplayer Game)</h3>
+											<h3>Strong Wellness<br />(Python Integrated Reports/Analytics Provider)</h3>
 										</header>
 									</article>
 									<article class="item">
@@ -152,7 +152,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<img src="images/pic08.jpg" alt="desc" class="image featured"/>
+							<img id="portrait" src="images/me.jpg" alt="desc" class="image featured"/>
 
 							<p>Hey there! My name is Lucas Rose, and I am an undergraduate of Macquarie University, currently studying a Bachelor of
 								Game Design & Development! I have an extreme passion for everything within the world of Software Development, Application Design and most
